# opentenbase-plugin_ctl

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_zh.md  SECURITY.md  cluster.toml.example  pyproject.toml
catalog/plugins/: otb_age.yml  otb_analytics.yml  otb_fulltext.yml  otb_health.yml  otb_routing.yml  otb_scheduler.yml  otb_snapshot.yml  otb_timeseries.yml
docs/: LEGACY_PLUGIN_ONBOARDING.md  M0_BASELINE.md  M1_CLUSTER_TODO.md  M1_DEPLOY_CLEAN_ENV_PLAN.md  M1_OTB_TIMESERIES_CLEAN_DEPLOY_PLAN.md  M1_STATUS.md  M2_GOVERNANCE_FLOW.md  M2_PLUGIN_GOVERNANCE.md  M3_ARCHIVE_AND_CONSISTENCY.md  M3_DISTRIBUTED_LIFECYCLE.md  M3_FINAL_STATUS.md  M4_RELEASE_QUALITY.md  PGMQ_ADAPTATION_STUDY.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.1.0.md
docs/issues/: otb_timeseries_chunk_distribution_warning.md
recipes/: otb_age_smoke.sql  otb_analytics_smoke.sql  otb_fulltext_smoke.sql  otb_health_smoke.sql  otb_routing_smoke.sql  otb_scheduler_smoke.sql  otb_snapshot_smoke.sql  otb_timeseries_smoke.sql
src/datanexus/: __init__.py  action_result.py  activation.py  catalog.py  cli.py  cluster.py  deploy.py  distributed_verify.py  distribution.py  doctor.py  i18n.py  manifest.py  plugin_archive.py  plugin_consistency.py  plugin_diagnose.py  plugin_governance.py  util.py  (+6 more)
tests/: test_activation.py  test_assess.py  test_build.py  test_catalog.py  test_cli_product.py  test_cluster.py  test_cluster_cli.py  test_deploy.py  test_dev_init.py  test_distributed_verify.py  test_distribution.py  test_i18n.py  test_local_runtime.py  test_main_flow_cli.py  test_plugin_archive.py  test_plugin_diagnose.py  test_plugin_governance.py  test_plugin_health.py  test_plugin_package.py  test_remote_executor.py  test_report.py  test_rollback.py  test_shell.py  test_state_store.py  test_user_catalog.py  test_verify.py
(+117 files in other folders)
