[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opentenbase-pluginctl"
version = "0.1.0"
description = "CLI-first lifecycle governance tool for OpenTenBase distributed plugins"
requires-python = ">=3.10"
authors = [{ name = "Codex" }]
dependencies = [
    "PyYAML>=6.0",
]

[project.scripts]
datanexus = "datanexus.cli:main"
opentenbase-pluginctl = "datanexus.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
