[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opentenbase-plugin_ctl"
version = "0.1.0"
description = "CLI-first lifecycle governance tool for OpenTenBase distributed plugins"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "iamkuangzhang" }]
dependencies = [
    "PyYAML>=6.0",
]

[project.scripts]
plugin_ctl = "plugin_ctl.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
